--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "dotenv": "^8.2.0",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
+    "react-awesome-spinners": "^1.3.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
